*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1002 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -54,6 +54,9 @@ database_tableview_totals=Totals
 database_tableview_averages=Average
 database_tableview_expports=Export ports
 database_tableview_impports=Import ports
+database_components_map_broadregions=Broad regions
+database_components_map_regions=Regions
+database_components_map_ports=Ports
 
 
 #Resources for estimates (estimates directory in Web-inf)
@@ -102,6 +105,8 @@ estimates_map_leg_places=Places
 estimates_map_leg_embplace=Place of embarkation
 estimates_map_leg_disembplace=Place of disembarkation
 estimates_map_leg_bothplaces=Place of embarkatrion / disembarkation
+estimates_components_map_broadregions=Broad regions
+estimates_components_map_regions=Regions
 
 estimates_table_exported=Exported
 estimates_table_imported=Imported
@@ -117,7 +122,6 @@ database_attributes_placcons=Place of construction
 database_attributes_yrcons=Year of construction
 database_attributes_placereg=Place of registration
 database_attributes_yrreg=Year of registration
-database_attributes_yrreg")"Imputed nation
 database_attributes_natinimp=Imputed nation
 database_attributes_rig=Vessel rig
 database_attributes_tonnage=Tonnage
