*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1026 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -64,6 +64,9 @@ estimates_table_natcarier=Flag
 estimates_table_expregions=Export regions
 estimates_table_impregions=Broad import regions
 estimates_table_impregionsbreakdown=Specific import regions
+estimates_table_departureBroad=Broad region where voyage began
+estimates_table_departureRegion=Region where voyage began
+estimates_table_departure=Port where voyage began
 estimates_table_individualyears=Individual years
 estimates_table_5years=5 year period
 estimates_table_10years=10 year period
