*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1064 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -199,7 +199,7 @@ components_timeline_stat_averagetonnage=Average tonnage
 components_timeline_stat_averagetonnagestand=Average tonnage (standardized)
 components_timeline_stat_averageguns=Average number of guns
 components_timeline_stat_rateresistance=Rate of resistance
-components_timeline_stat_averagedurationfirst=Average duration of first leg of voyage (days)
+components_timeline_stat_averagedurationfirst=Average duration of voyage from home port to disembarkation (days)
 components_timeline_stat_averagedurationmiddle=Average duration of middle passage (days)
 components_timeline_stat_averagecrew=Average crew at outset
 components_timeline_stat_averagecrewfirst=Average crew at first landing of slaves
