--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -283,8 +283,8 @@ images_query_title_originated=originated
 images_query_title_before=before
 images_query_title_after=after
 images_query_title_voyage_id=with voyage ID
-images_next_detail_image=Next image » 
-images_prev_detail_image=« Previous image 
+images_next_detail_image=Next image >>
+images_prev_detail_image=<< Previous image 
 images_back=Go back
 images_all_categories=All categories
 images_related_voyages=Related voyages
