--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -54,8 +54,8 @@ database_tableview_avg=Avg
 database_tableview_count=Count
 database_tableview_totals=Totals
 database_tableview_averages=Average
-database_tableview_expports=Export ports
-database_tableview_impports=Import ports
+database_tableview_expports=Embarkation ports
+database_tableview_impports=Disembarkation ports
 database_components_map_broadregions=Broad regions
 database_components_map_regions=Regions
 database_components_map_ports=Ports
@@ -63,9 +63,9 @@ database_components_map_ports=Ports
 
 #Resources for estimates (estimates directory in Web-inf)
 estimates_table_natcarier=Flag
-estimates_table_expregions=Export regions
-estimates_table_impregions=Broad import regions
-estimates_table_impregionsbreakdown=Specific import regions
+estimates_table_expregions=Embarkation regions
+estimates_table_impregions=Broad disembarkation regions
+estimates_table_impregionsbreakdown=Specific disembarkation regions
 estimates_table_departureBroad=Broad region where voyage began
 estimates_table_departureRegion=Region where voyage began
 estimates_table_departure=Port where voyage began
@@ -78,20 +78,20 @@ estimates_table_100years=100 year period
 estimates_table_rows=Rows
 estimates_table_columns=Columns
 estimates_table_show=Show
-estimates_table_expimp=Exported/Imported
-estimates_table_onlyexp=Only exported
-estimates_table_onlyimp=Only imported
+estimates_table_expimp=Embarked/Disembarked
+estimates_table_onlyexp=Only embarked
+estimates_table_onlyimp=Only disembarked
 estimates_table_omitempty=Omit empty
 estimates_left_timeframe=Time frame
 estimates_left_from=Show data only from
 estimates_left_to=to
 estimates_left_natcarriers=Flag
-estimates_left_expregions=Export regions
-estimates_left_impregions=Import regions
+estimates_left_expregions=Embarkation regions
+estimates_left_impregions=Disembarkation regions
 estimates_left_currentquery=Current query
 estimates_left_selectednations=Selected national carriers:
-estimates_left_selectedexport=Selected export regions:
-estimates_left_selectedimport=Selected import regions:
+estimates_left_selectedexport=Selected embarkation regions:
+estimates_left_selectedimport=Selected disembarkation regions:
 estimates_left_changeselection=Change selection
 estimates_left_resetselection=Reset to default
 estimates_main_table=Tables
@@ -113,11 +113,11 @@ estimates_map_leg_bothplaces=Place of embarkatrion / disembarkation
 estimates_components_map_broadregions=Broad regions
 estimates_components_map_regions=Regions
 
-estimates_table_exported=Exported
-estimates_table_imported=Imported
+estimates_table_exported=Embarked
+estimates_table_imported=Disembarked
 estimates_table_totals=Totals
-estimates_timeline_exported=Exported
-estimates_timeline_imported=Imported
+estimates_timeline_exported=Embarked
+estimates_timeline_imported=Disembarked
 
 
 database_attributes_voyageid=Voyage ID
@@ -241,10 +241,10 @@ components_table_missingid=MISSING
 components_detailmap_location=Location
 components_estimate_nationcarrierattr=National carrier
 components_estimate_yearattr=Year
-components_estimate_impregionattr=Import region
-components_estimate_expregionattr=Export region
-components_estimate_exportedattr=Exported
-components_estimate_importedattr=Imported
+components_estimate_impregionattr=Disembarkation region
+components_estimate_expregionattr=Embarkation region
+components_estimate_exportedattr=Embarked
+components_estimate_importedattr=Disembarked
 components_utilsdate_weeks=weeks
 components_utilsdate_days=days
 components_utilsdate_hours=hours
