--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -70,11 +70,11 @@ estimates_table_departureBroad=Broad region where voyage began
 estimates_table_departureRegion=Region where voyage began
 estimates_table_departure=Port where voyage began
 estimates_table_individualyears=Individual years
-estimates_table_5years=5 year period
-estimates_table_10years=10 year period
-estimates_table_25years=25 year period
-estimates_table_50years=50 year period
-estimates_table_100years=100 year period
+estimates_table_5years=5-year periods
+estimates_table_10years=10-year periods
+estimates_table_25years=25-year periods
+estimates_table_50years=50-year periods
+estimates_table_100years=100-year periods
 estimates_table_rows=Rows
 estimates_table_columns=Columns
 estimates_table_show=Show
