*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1078 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -96,7 +96,7 @@ estimates_left_changeselection=Change selection
 estimates_left_resetselection=Reset to default
 estimates_main_table=Tables
 estimates_main_list=Listing
-estimates_main_map=Map
+estimates_main_map=Maps
 estimates_main_timeline=Timeline
 estimates_list_showing=Showing
 estimates_list_outof=out of
