*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1087 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -1,5 +1,3 @@
-
-
 #Resources for database part (database directory in Web-inf)
 database_voyage_voyagedetail=Voyage ID = 
 database_voyage_voyagevariables=Voyage variables
@@ -49,6 +47,15 @@ database_search_maps=Maps
 database_search_selecttimeframe=Select time frame
 database_search_selectrevision=Select database revision
 database_search_expected=Results: {0,number,#,###,###}
+database_search_permlink=Create a link
+database_search_permlink_info=Use this button to get a permanent link to the current query. The query is assigned a unique number which will appear as part of the URL. To reactivate the query in the future, paste in the URL with the unique number.
+database_search_permlink_button=Create a link
+database_search_permlink_title=Permanent link has been created
+database_search_permlink_desc=To reactivate the current database query in the future, copy the following URL with the unique number and then paste it to the browser:
+database_search_permlink_close=OK, Close This
+database_search_permlink_copy=Copy to clipboard
+database_search_no_result_title=No results
+database_search_no_result_desc=Your query has not produced any results. There is no voyage in the database corresponding to your conditions in the query. Please review your query in the left menu and try again. You may also want to delete the current query and start over again.   
 database_tableview_sum=Sum
 database_tableview_avg=Avg
 database_tableview_count=Count
@@ -102,6 +109,11 @@ estimates_list_showing=Showing
 estimates_list_outof=out of
 estimates_list_show=Show
 estimates_list_resperpage=results per page.
+estimates_main_permlink_button=Create a link
+estimates_main_permlink_title=Permanent link has been created
+estimates_main_permlink_desc=To reactivate the current database query in the future, copy the following URL with the unique number and then paste it to the browser:
+estimates_main_permlink_close=OK, Close This
+estimates_main_permlink_copy=Copy to clipboard
 
 #code resources
 estimates_map_location=Location :
