--- a/src/tast.properties
+++ b/src/tast.properties
@@ -1,3 +1,6 @@
+#general
+site.url = http://www.slavevoyages.org
+
 #SQL scripts configuration - will be ecected every time the tomcat starts
 sql.scriptdir = /home/juri/sql/
 
@@ -5,6 +8,7 @@ sql.scriptdir = /home/juri/sql/
 database.defaultrevision=1
 
 #maps
+map.url = http://localhost:8080/tast-map-assets
 map.default.center.x = -36.87
 map.default.center.y = 12.315
 map.layer.status.continents.userlabel=Continents
@@ -19,12 +23,11 @@ map.layer.status.flows.default=OFF
 map.layer.status.regions.userlabel=Regions
 
 #images
-#images.dir = D:\\Library\\SlaveTrade\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\TransAtlanticSlaveTrade\\images
-#images.dir = /home/juri/workspace/tast/WebContent/images
-#images.dir = D:\\Emory\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images
-images.dir = c:\\Documents and Settings\\pjurczy\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\webapps\\tast\\images-database
+images.url = http://localhost:8080/tast-images-database
+images.dir = E:\\Emory\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\wtpwebapps\\tast\\images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
 images.references.maxlen = 500
 images.emorylocation.maxlen = 500
+
