*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1096 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -358,3 +358,13 @@ slaves_all_port_selected=all ports selected
 submissions_oryginal_voyage=Current voyage
 submissions_changed_voyage=Edited information
 submissions_suggested_voyage=Suggested change #
+
+# voyage map
+voyage_map_prch_place_1=First place of slave purchase
+voyage_map_prch_place_2=Second place of slave purchase
+voyage_map_prch_place_3=Third place of slave purchase
+voyage_map_prch_place_principal=Principal place of slave purchase
+voyage_map_sell_place_1=First place of slave landing
+voyage_map_sell_place_2=Second place of slave landing
+voyage_map_sell_place_3=Third place of slave landing
+voyage_map_sell_place_principal=Principal place of slave landing
