--- a/src/tast.properties
+++ b/src/tast.properties
@@ -12,7 +12,7 @@ map.url = http://localhost:8080/tast-map-assets
 map.default.center.x = -36.87
 map.default.center.y = 12.315
 map.layer.status.continents.userlabel=Continents
-map.layer.status.boundries.userlabel=Boundries
+map.layer.status.boundries.userlabel=Boundaries
 map.layer.status.boundries.default=OFF
 map.layer.status.rivers.userlabel=Rivers
 map.layer.status.rivers.default=OFF
@@ -24,7 +24,7 @@ map.layer.status.regions.userlabel=Regions
 
 #images
 images.url = http://localhost:8080/tast-images-database
-images.dir = E:\\Emory\\TAST\\projects\\.metadata\\.plugins\\org.eclipse.wst.server.core\\tmp0\\wtpwebapps\\tast\\images-database
+images.dir = C:\\Program Files\Apache Software Foundation\Tomcat 5.5\webapps\tast-images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
