Changing top navigation path in voyage detail
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1097 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -1,5 +1,9 @@
 #Resources for database part (database directory in Web-inf)
-database_voyage_voyagedetail=Voyage ID = 
+database_voyage_detail_with_year=Voyage of {0} ({1,number,####})
+database_voyage_detail_without_year=Voyage of {0}
+database_voyage_detail_prev_database=Database search
+database_voyage_detail_prev_image=Image database
+database_voyage_detail_prev_slaves=Names database
 database_voyage_voyagevariables=Voyage variables
 database_voyage_voyagemap=Voyage map
 database_voyage_voyageimages=Related images
