*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1100 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -42,7 +42,7 @@ database_search_currentquery=Current query
 database_search_searchbutton=Search
 database_search_newquery=New query
 database_search_history=History
-database_search_listing=Result listing
+database_search_listing=Results
 database_search_tableview=Tables
 database_search_timeline=Timeline
 database_search_customgraphs=Custom graphs
@@ -164,7 +164,7 @@ components_search_between=is between
 components_search_and=and
 components_search_isatmost=is at most
 components_search_isatleast=is at least
-components_search_isequal=is equal
+components_search_isequal=is equal to
 components_search_or=or
 components_search_delete=delete
 components_search_restore=restore
