Implementing last set of suggestions to voyage map
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1104 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -1,6 +1,6 @@
 #Resources for database part (database directory in Web-inf)
-database_voyage_detail_with_year=Voyage of {0} ({1,number,####})
-database_voyage_detail_without_year=Voyage of {0}
+database_voyage_detail_with_year=Voyage of the <i>{0}</i> ({1,number,####})
+database_voyage_detail_without_year=Voyage of the <i>{0}</i>
 database_voyage_detail_prev_database=Database search
 database_voyage_detail_prev_image=Image database
 database_voyage_detail_prev_slaves=Names database
