Updates to the image database
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1110 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -279,17 +279,17 @@ checkbox_list_select_deselect_all=All items
 
 #images
 images_vessels=Vessels
-images_vessels_link=See all images of vessels ...
+images_vessels_link=See all images ...
 images_slaves=Slaves
-images_slaves_link=See all images of slaves ...
+images_slaves_link=See all images ...
 images_slavers=Slavers
-images_slavers_link=See all images of slavers ...
+images_slavers_link=See all images ...
 images_ports=Ports
-images_ports_link=See all images of ports ...
+images_ports_link=See all images ...
 images_regions=Regions
-images_regions_link=See all images of regions ...
+images_regions_link=See all images ...
 images_manuscripts=Artifacts
-images_manuscripts_link=See all images of artifacts ...
+images_manuscripts_link=See all images ...
 images_query_title=Images
 images_query_showing=Showing images
 images_query_title_title=where title contains
