--- a/src/tast.properties
+++ b/src/tast.properties
@@ -24,7 +24,7 @@ map.layer.status.regions.userlabel=Regions
 
 #images
 images.url = http://localhost:8080/tast-images-database
-images.dir = C:\\Program Files\Apache Software Foundation\Tomcat 5.5\webapps\tast-images-database
+images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 5.5\\webapps\\tast-images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
