*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1114 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -41,7 +41,7 @@ database_search_general=General variables
 database_search_currentquery=Current query
 database_search_searchbutton=Search
 database_search_newquery=New query
-database_search_history=History
+database_search_history=Previous queries
 database_search_listing=Results
 database_search_tableview=Tables
 database_search_timeline=Timeline
@@ -88,6 +88,7 @@ estimates_table_50years=50-year periods
 estimates_table_100years=100-year periods
 estimates_table_rows=Rows
 estimates_table_columns=Columns
+estimates_table_cell=Cells
 estimates_table_show=Show
 estimates_table_expimp=Embarked/Disembarked
 estimates_table_onlyexp=Only embarked
@@ -123,8 +124,8 @@ estimates_main_permlink_copy=Copy to clipboard
 estimates_map_location=Location :
 estimates_map_leg_slavnum=Number of slaves
 estimates_map_leg_places=Places
-estimates_map_leg_embplace=Place/Region of embarkation
-estimates_map_leg_disembplace=Place/Region of disembarkation
+estimates_map_leg_embplace=Place of embarkation
+estimates_map_leg_disembplace=Place of disembarkation
 estimates_map_leg_bothplaces=Place of embarkatrion / disembarkation
 estimates_components_map_broadregions=Broad regions
 estimates_components_map_regions=Regions
