--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     <filter>
         <filter-name>ExtensionsFilter</filter-name>
         <filter-class>
-            org.apache.myfaces.component.html.util.ExtensionsFilter
+            org.apache.myfaces.webapp.filter.ExtensionsFilter
         </filter-class>
         <init-param>
             <param-name>uploadMaxFileSize</param-name>
@@ -86,9 +86,9 @@
 		<servlet-name>ThumbnailServlet</servlet-name>
 		<url-pattern>/servlet/thumbnail</url-pattern>
 	</servlet-mapping>
-	
-	<welcome-file-list>
-		<welcome-file>index.faces</welcome-file>
-	</welcome-file-list>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
