--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -375,7 +375,7 @@ voyage_map_sell_place_3=Third place of slave landing
 voyage_map_sell_place_principal=Principal place of slave landing
 
 # help box
-help_box_menu_index=Help
+help_box_menu_faq=FAQ
 help_box_menu_demos=Demos
 help_box_menu_sitemap=Sitemap
 help_box_menu_glossary=Glossary
