Adding navigation bar to image database
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1194 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -279,18 +279,6 @@ components_utilsdate_ms=ms
 checkbox_list_select_deselect_all=All items
 
 #images
-images_vessels=Vessels
-images_vessels_link=See all images ...
-images_slaves=Slaves
-images_slaves_link=See all images ...
-images_slavers=Slavers
-images_slavers_link=See all images ...
-images_ports=Ports
-images_ports_link=See all images ...
-images_regions=Regions
-images_regions_link=See all images ...
-images_manuscripts=Artifacts
-images_manuscripts_link=See all images ...
 images_query_title=Images
 images_query_showing=Showing images
 images_query_title_title=where title contains
@@ -300,8 +288,8 @@ images_query_title_originated=originated
 images_query_title_before=before
 images_query_title_after=after
 images_query_title_voyage_id=with voyage ID
-images_next_detail_image=Next image >>
-images_prev_detail_image=<< Previous image 
+images_next_detail_image=Next image
+images_prev_detail_image=Previous image 
 images_back=Go back
 images_all_categories=All categories
 images_related_voyages=Related voyages
