Fixing a problem with dates in CSV
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1195 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -4,6 +4,10 @@ site.url = http://www.slavevoyages.org
 #Default revision (selected by default in database search)
 database.defaultrevision=1
 
+#formatting
+format.date=yyyy-MM-dd
+format.date.cvs=yyyy-MM-dd
+
 #maps
 map.url = http://localhost:8080/tast-map-assets
 map.default.center.x = -36.87
