--- a/src/tast.properties
+++ b/src/tast.properties
@@ -9,7 +9,7 @@ format.date=yyyy-MM-dd
 format.date.cvs=yyyy-MM-dd
 
 #maps
-map.url = http://localhost:8080/tast-map-assets
+map.url = http://wilson.library.emory.edu:9090/tast/tast-map-assets
 map.default.center.x = -36.87
 map.default.center.y = 12.315
 map.layer.status.continents.userlabel=Continents
