Fixing a bug where the <h:selectOne> with forceId was throwing a hidden exception
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1217 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/build.xml
+++ b/build.xml
@@ -27,28 +27,12 @@
 			</classpath>
 		</javac>
 	</target>
-
-	<target name="jar" depends="compile">
-		<jar destfile="tast.jar" basedir="${build}">
-			<fileset dir="${src}" includes="edu/emory/library/tast/dm/*.hbm.xml" />
-			<exclude name="tast.properties" />
-			<exclude name="hibernate.properties" />
-			<exclude name="symbols.xml" />
-			<exclude name="languages.xml" />
-			<exclude name="SlaveTradeResources.properties" />
-			<exclude name="hibernate.cfg.xml" />
-			<exclude name="log4j.properties" />
-			<exclude name="attribute-groups.xml" />
-			<exclude name="searchable-attributes.xml" />
-			<exclude name="table-attributes.xml" />
-			<exclude name="submission-attributes.xml" />
-		</jar>
-	</target>
-
-	<target name="war" depends="jar,compile">
+	
+	<target name="war" depends="compile">
 		<war warfile="tast.war" webxml="${webdir}/WEB-INF/web.xml">
-			<lib file="tast.jar" />
+			<classes dir="${build}" />
 			<classes dir="${src}">
+				<include name="edu/emory/library/tast/dm/*.hbm.xml" />
 				<include name="tast.properties" />
 				<include name="hibernate.properties" />
 				<include name="symbols.xml" />
