Changing the code for Sierra Leone in slaves database
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1223 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -32,3 +32,7 @@ images.source.maxlen = 500
 images.references.maxlen = 500
 images.emorylocation.maxlen = 500
 
+# slaves
+slaves.sierra_leone.id = 60299
+slaves.havana.id = 31312
+
