--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -126,8 +126,8 @@ estimates_main_permlink_copy=Copy to clipboard
 estimates_map_location=Location :
 estimates_map_leg_slavnum=Number of slaves
 estimates_map_leg_places=Places
-estimates_map_leg_embplace=Place of embarkation
-estimates_map_leg_disembplace=Place of disembarkation
+estimates_map_leg_embplace=Visible places of embarkation
+estimates_map_leg_disembplace=Visible places of disembarkation
 estimates_map_leg_bothplaces=Place of embarkatrion / disembarkation
 estimates_components_map_broadregions=Broad regions
 estimates_components_map_regions=Regions
