--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -54,10 +54,10 @@ database_search_selecttimeframe=Select time frame
 database_search_selectrevision=Select database revision
 database_search_expected=Results: {0,number,#,###,###}
 database_search_permlink=Create a link
-database_search_permlink_info=Use this button to get a permanent link to the current query. The query is assigned a unique number which will appear as part of the URL. To reactivate the query in the future, paste in the URL with the unique number.
+database_search_permlink_info=Use this button to get a URL to the current query. To reactivate the query in the future, paste the URL to the address bar.
 database_search_permlink_button=Create a link
-database_search_permlink_title=Permanent link has been created
-database_search_permlink_desc=To reactivate the current database query in the future, copy the following URL with the unique number and then paste it to the browser:
+database_search_permlink_title=URL has been created
+database_search_permlink_desc=To reactivate the current database query in the future, copy the following URL and then paste it to the address bar:
 database_search_permlink_close=OK, Close This
 database_search_permlink_copy=Copy to clipboard
 database_search_no_result_title=No results
