Replacing permlinks in estimates by URL's. Does not yet work for import regions.
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1231 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -54,10 +54,10 @@ database_search_selecttimeframe=Select time frame
 database_search_selectrevision=Select database revision
 database_search_expected=Results: {0,number,#,###,###}
 database_search_permlink=Create a link
-database_search_permlink_info=Use this button to get a URL to the current query. To reactivate the query in the future, paste the URL to the address bar.
+database_search_permlink_info=Use this button to obtain a URL that will serve as a link to the current query. To reactivate the query in the future, paste the URL into the address bar.
 database_search_permlink_button=Create a link
 database_search_permlink_title=URL has been created
-database_search_permlink_desc=To reactivate the current database query in the future, copy the following URL and then paste it to the address bar:
+database_search_permlink_desc=To reactivate the current database query in the future, copy the following URL and then paste it into the address bar:
 database_search_permlink_close=OK, Close This
 database_search_permlink_copy=Copy to clipboard
 database_search_no_result_title=No results
@@ -117,8 +117,8 @@ estimates_list_outof=out of
 estimates_list_show=Show
 estimates_list_resperpage=results per page.
 estimates_main_permlink_button=Create a link
-estimates_main_permlink_title=Permanent link has been created
-estimates_main_permlink_desc=To reactivate the current database query in the future, copy the following URL with the unique number and then paste it to the browser:
+estimates_main_permlink_title=URL link has been created
+estimates_main_permlink_desc=To reactivate the current query in the future, copy the following URL and then paste it into the address bar:
 estimates_main_permlink_close=OK, Close This
 estimates_main_permlink_copy=Copy to clipboard
 
