--- a/src/tast.properties
+++ b/src/tast.properties
@@ -1,5 +1,5 @@
 #general
-site.url = http://www.slavevoyages.org
+site.url = http://localhost:8080/tast
 
 #Default revision (selected by default in database search)
 database.defaultrevision=1
