--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -242,12 +242,12 @@ components_timeline_stat_averageprice=Average price (standardized)
 components_timeline_stat_numdeaths=Number of slave deaths
 components_timeline_stat_averagedeaths=Average slave deaths
 components_timeline_stat_mortrate=Slave mortality rate
-components_statistictab_slavemb=Slaves embarked
-components_statistictab_slavdisemb=Slaves disembarked
-components_statistictab_slavdead=Percentage of slaves embarked who died during voyage 
-components_statistictab_lenmiddlepass=Length of Middle Passage (in days) 
-components_statistictab_percentmale=Percentage male
-components_statistictab_percentchil=Percentage children 
+components_statistictab_slavemb=Slaves embarked *
+components_statistictab_slavdisemb=Slaves disembarked *
+components_statistictab_slavdead=Percentage of slaves embarked who died during voyage *
+components_statistictab_lenmiddlepass=Length of Middle Passage (in days) *
+components_statistictab_percentmale=Percentage male *  
+components_statistictab_percentchil=Percentage children * 
 components_statistictab_tonnagevessel=Tonnage of vessel
 components_statistictab_crewatoutset=Number of crew at outset
 components_statistictab_total_slaves=Total slaves
