--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -30,7 +30,7 @@
     <filter>
         <filter-name>ExtensionsFilter</filter-name>
         <filter-class>
-            org.apache.myfaces.component.html.util.ExtensionsFilter
+            org.apache.myfaces.webapp.filter.ExtensionsFilter
         </filter-class>
         <init-param>
             <param-name>uploadMaxFileSize</param-name>
@@ -86,40 +86,9 @@
 		<servlet-name>ThumbnailServlet</servlet-name>
 		<url-pattern>/servlet/thumbnail</url-pattern>
 	</servlet-mapping>
-	
-	<welcome-file-list>
-		<welcome-file>index.faces</welcome-file>
-	</welcome-file-list>
 
-	<security-constraint>
-	    <web-resource-collection>
-	        <web-resource-name>user-resource</web-resource-name>
-		        <description>pages which require login</description>
-			<url-pattern>*.jsp</url-pattern>
-			<url-pattern>*.html</url-pattern>
-			<url-pattern>*.jsf</url-pattern>
-			<url-pattern>*.faces</url-pattern>
-			<http-method>GET</http-method>
-			<http-method>POST</http-method>
-		</web-resource-collection>
-		<auth-constraint>
-		    <description>Must authenticate before querying the system</description>
-		    <role-name>web_tast</role-name>
-		</auth-constraint>
-		<user-data-constraint>
-			  <transport-guarantee>NONE</transport-guarantee>
-		</user-data-constraint>
-	</security-constraint>
-						
-			  <login-config>
-			      <auth-method>BASIC</auth-method>
-			      <realm-name>default</realm-name>
-			  </login-config>
-							    
-			  <security-role>
-			      <description>Any user of the system</description>
-    				<role-name>web_tast</role-name>
-			</security-role>
-
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
 
 </web-app>
