Changing the order of columns in the slave database
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1405 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -308,7 +308,7 @@ components_names_attributes_voyageid=Voyage ID
 components_names_attributes_name=Name
 components_names_attributes_shipname=Ship name
 components_names_attributes_age=Age
-components_names_attributes_height=Height (inches)
+components_names_attributes_height=Height [in]
 components_names_attributes_datearr=Arrival
 components_names_attributes_source=Source
 components_names_attributes_country=Origin
