Adding estimates export areas
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1410 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -100,6 +100,7 @@ estimates_left_timeframe=Time frame
 estimates_left_from=Show data only from
 estimates_left_to=to
 estimates_left_natcarriers=Flag
+estimates_left_regions=Embarkation/Disembarkation
 estimates_left_expregions=Embarkation regions
 estimates_left_impregions=Disembarkation regions
 estimates_left_currentquery=Current query
