Proper error page
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1450 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -86,6 +86,16 @@
 		<servlet-name>ThumbnailServlet</servlet-name>
 		<url-pattern>/servlet/thumbnail</url-pattern>
 	</servlet-mapping>
+	
+	<error-page> 
+	    <error-code>404</error-code> 
+	    <location>/error.jsp</location> 
+	</error-page>	
+
+	<error-page> 
+	    <error-code>500</error-code> 
+	    <location>/error.jsp</location> 
+	</error-page>	
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
