--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -87,18 +87,13 @@
 		<url-pattern>/servlet/thumbnail</url-pattern>
 	</servlet-mapping>
 	
-	<error-page> 
-	    <error-code>404</error-code> 
-	    <location>/error.jsp</location> 
-	</error-page>	
+    <welcome-file-list>
+        <welcome-file>/index.faces</welcome-file>
+    </welcome-file-list>
 
 	<error-page> 
 	    <error-code>500</error-code> 
 	    <location>/error.jsp</location> 
-	</error-page>	
-
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
+	</error-page>
 
 </web-app>
