*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1584 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -242,7 +242,7 @@ components_timeline_stat_percentchildren=Percentage children (among captives)
 components_timeline_stat_averageprice=Average price (standardized)
 components_timeline_stat_numdeaths=Number of slave deaths
 components_timeline_stat_averagedeaths=Average slave deaths
-components_timeline_stat_mortrate=Slave mortality rate
+components_timeline_stat_mortrate=Average percentage of slaves embarked who died during the voyage
 components_statistictab_slavemb=Slaves embarked *
 components_statistictab_slavdisemb=Slaves disembarked *
 components_statistictab_slavdead=Percentage of slaves embarked who died during voyage *
