Implemented the option to use regular SQL queries. This was introduced to support the full-text query syntax of PostgreSQL in order to optimize text based queries. This submission also contains a utility which generates full-text indexes for ship name, captains, owners and sources.
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1590 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/tast.properties
+++ b/src/tast.properties
@@ -3,6 +3,7 @@ site.url = http://localhost:8080/tast
 
 # default revision (selected by default in database search)
 database.defaultrevision=1
+database.usesql=true
 
 # formatting
 format.date=yyyy-MM-dd
