--- a/src/SlaveTradeResources.properties
+++ b/src/SlaveTradeResources.properties
@@ -243,6 +243,7 @@ components_timeline_stat_averageprice=Average price (standardized)
 components_timeline_stat_numdeaths=Number of slave deaths
 components_timeline_stat_averagedeaths=Average slave deaths
 components_timeline_stat_mortrate=Average percentage of slaves embarked who died during the voyage
+components_timeline_stat_resistance=Rate of resistance
 components_statistictab_slavemb=Slaves embarked *
 components_statistictab_slavdisemb=Slaves disembarked *
 components_statistictab_slavdead=Percentage of slaves embarked who died during voyage *
