Modified build.xml to exclude tests and image submission form
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1628 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/build.xml
+++ b/build.xml
@@ -45,7 +45,12 @@
 				<include name="table-attributes.xml" />
 				<include name="submission-attributes.xml" />
 			</classes>
-			<fileset dir="${webdir}" />
+			<fileset dir="${webdir}">
+				<exclude name="tests/**" />
+				<exclude name="images-list.jsp" />
+				<exclude name="images-detail.jsp" />
+				<exclude name="lookup.jsp" />
+			</fileset>
 		</war>
 	</target>	
 	
