--- a/build.xml
+++ b/build.xml
@@ -28,6 +28,23 @@
 		</javac>
 	</target>
 	
+	<target name="jar" depends="compile">
+		<jar destfile="tast.jar">
+		    <fileset dir="${build}" />
+			<fileset dir="${src}">
+				<include name="edu/emory/library/tast/dm/*.hbm.xml" />
+				<include name="hibernate.cfg.xml" />
+				<include name="resources.properties" />
+				<include name="symbols.xml" />
+				<include name="languages.xml" />
+				<include name="attribute-groups.xml" />
+				<include name="searchable-attributes.xml" />
+				<include name="table-attributes.xml" />
+				<include name="submission-attributes.xml" />
+			</fileset>
+		</jar>
+	</target>
+	
 	<target name="war" depends="compile">
 		<war warfile="tast.war" webxml="${webdir}/WEB-INF/web.xml">
 			<classes dir="${build}" />
@@ -35,11 +52,11 @@
 				<include name="edu/emory/library/tast/dm/*.hbm.xml" />
 				<include name="tast.properties" />
 				<include name="hibernate.properties" />
+				<include name="log4j.properties" />
+				<include name="hibernate.cfg.xml" />
+				<include name="resources.properties" />
 				<include name="symbols.xml" />
 				<include name="languages.xml" />
-				<include name="SlaveTradeResources.properties" />
-				<include name="hibernate.cfg.xml" />
-				<include name="log4j.properties" />
 				<include name="attribute-groups.xml" />
 				<include name="searchable-attributes.xml" />
 				<include name="table-attributes.xml" />
