--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -32,11 +32,18 @@
 		<filter-class>org.ajaxanywhere.AAFilter</filter-class>
 	</filter>
 	
+	<filter>
+		<filter-name>EncodingFilter</filter-name>
+		<filter-class>edu.emory.library.tast.EncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+	</filter>
+	
     <filter>
         <filter-name>ExtensionsFilter</filter-name>
-        <filter-class>
-            org.apache.myfaces.webapp.filter.ExtensionsFilter
-        </filter-class>
+        <filter-class>org.apache.myfaces.webapp.filter.ExtensionsFilter</filter-class>
         <init-param>
             <param-name>uploadMaxFileSize</param-name>
             <param-value>10m</param-value>
@@ -45,17 +52,22 @@
             <param-name>uploadThresholdSize</param-name>
             <param-value>100k</param-value>
         </init-param>
-    </filter>	
+    </filter>
 
     <filter-mapping>
         <filter-name>AjaxAnywhere</filter-name>
         <servlet-name>FacesServlet</servlet-name>
     </filter-mapping>
     
-   <filter-mapping>
+	<filter-mapping>
         <filter-name>ExtensionsFilter</filter-name>
         <servlet-name>FacesServlet</servlet-name>
     </filter-mapping>
+
+	<filter-mapping>
+		<filter-name>EncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>	
 
     <listener>
         <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
