Added compression filter.  Static faces pages are compressed on the fly before being sent to client.  To disable, remove the servlet-mapping from web.xml.
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1641 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -54,6 +54,16 @@
         </init-param>
     </filter>
 
+  <filter>
+    <filter-name>CompressFilter</filter-name>
+    <filter-class>com.jspbook.GZIPFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>CompressFilter</filter-name>
+        <servlet-name>FacesServlet</servlet-name>
+  </filter-mapping>
+
     <filter-mapping>
         <filter-name>AjaxAnywhere</filter-name>
         <servlet-name>FacesServlet</servlet-name>
