more config changes
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1668 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/tast.properties
+++ b/src/TransAtlanticSlaveTrade/src/tast.properties
@@ -17,8 +17,8 @@ map.default.x2 =  20
 map.default.y2 =  60
 
 # images
-images.url = http://localhost:8080/images-database
-images.dir = "C:\\Program Files\\Apache Software Foundation\Tomcat 6.0\\webapps\\images-database"
+images.url =  http://slavevoyages.org/images-database
+images.dir = C:/Program Files/Apache Software Foundation/Tomcat 6.0/webapps/images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
