changed tast-map-assets  to map-assets
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1670 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/tast.properties
+++ b/src/TransAtlanticSlaveTrade/src/tast.properties
@@ -10,7 +10,7 @@ format.date=yyyy-MM-dd
 format.date.cvs=yyyy-MM-dd
 
 # maps
-map.url = http://localhost:8080/tast-map-assets
+map.url = http://localhost:8080/map-assets
 map.default.x1 = -100
 map.default.y1 = -60
 map.default.x2 =  20
