added new attributes
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@1756 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/src/TransAtlanticSlaveTrade/src/hibernate.properties
+++ b/src/TransAtlanticSlaveTrade/src/hibernate.properties
@@ -1,4 +1,5 @@
 hibernate.connection.driver_class = org.postgresql.Driver
+##hibernate.connection.url = jdbc:postgresql://wilson.library.emory.edu/tast_import_04252008
 hibernate.connection.url = jdbc:postgresql://localhost/tast
 hibernate.connection.username = tast
 hibernate.connection.password = pass_1234
