--- a/src/TransAtlanticSlaveTrade/src/tast.properties
+++ b/src/TransAtlanticSlaveTrade/src/tast.properties
@@ -10,15 +10,15 @@ format.date=yyyy-MM-dd
 format.date.cvs=yyyy-MM-dd
 
 # maps
-map.url = http://localhost:8080/map-assets
+map.url = http://localhost:8080/tast-map-assets
 map.default.x1 = -100
 map.default.y1 = -60
 map.default.x2 =  20
 map.default.y2 =  60
 
 # images
-images.url = http://localhost:8080/images-database
-images.dir = C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0\\webapps\\images-database
+images.url = http://localhost:8080/tast-images-database
+images.dir = C:\\tools\\apache-5.5.25\\webapps\\tast-images-database
 images.title.maxlen = 200
 images.creator.maxlen = 200
 images.source.maxlen = 500
