--- a/src/TransAtlanticSlaveTrade/src/log4j.properties
+++ b/src/TransAtlanticSlaveTrade/src/log4j.properties
@@ -12,17 +12,16 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 
-log4j.rootLogger=warn, stdout, file
+log4j.rootLogger=warn, stdout
 
 log4j.logger.org.hibernate=info
 #log4j.logger.org.hibernate=debug
-
 
 ### log HQL query parser activity
 #log4j.logger.org.hibernate.hql.ast.AST=debug
 
 ### log just the SQL
-log4j.logger.org.hibernate.SQL=debug
+#log4j.logger.org.hibernate.SQL=debug
 
 ### log JDBC bind parameters ###
 log4j.logger.org.hibernate.type=info
@@ -46,12 +45,3 @@ log4j.logger.org.hibernate.tool.hbm2ddl=debug
 ### enable the following line if you want to track down connection ###
 ### leakages when using DriverManagerConnectionProvider ###
 #log4j.logger.org.hibernate.connection.DriverManagerConnectionProvider=trace
-
-log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.maxFileSize=200KB
-log4j.appender.file.maxBackupIndex=3
-log4j.appender.file.File=\\tmp\\tast.log
-##log4j.appender.file.threshold=info, debug, error
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
-
